src/gen/ŘParser.cpp

// Generated from Ř.g4 by ANTLR 4.12.0


#include "ŘVisitor.h"

#include "ŘParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ŘParserStaticData final {
  ŘParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ŘParserStaticData(const ŘParserStaticData&) = delete;
  ŘParserStaticData(ŘParserStaticData&&) = delete;
  ŘParserStaticData& operator=(const ŘParserStaticData&) = delete;
  ŘParserStaticData& operator=(ŘParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag řParserOnceFlag;
ŘParserStaticData *řParserStaticData = nullptr;

void řParserInitialize() {
  assert(řParserStaticData == nullptr);
  auto staticData = std::make_unique<ŘParserStaticData>(
    std::vector<std::string>{
      "prog", "block", "stmtlist", "stmt", "expr", "arglist", "func", "paramlist", 
      "literal"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "';'", "'<-'", "'if'", "'else'", "'while'", "'('", 
      "')'", "'*'", "'/'", "'+'", "'-'", "'=='", "'>'", "'<'", "'!'", "','", 
      "'fun'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "INTLIT", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  řParserStaticData = staticData.release();
}

}

ŘParser::ŘParser(TokenStream *input) : ŘParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ŘParser::ŘParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ŘParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *řParserStaticData->atn, řParserStaticData->decisionToDFA, řParserStaticData->sharedContextCache, options);
}

ŘParser::~ŘParser() {
  delete _interpreter;
}

const atn::ATN& ŘParser::getATN() const {
  return *řParserStaticData->atn;
}

std::string ŘParser::getGrammarFileName() const {
  return "Ř.g4";
}

const std::vector<std::string>& ŘParser::getRuleNames() const {
  return řParserStaticData->ruleNames;
}

const dfa::Vocabulary& ŘParser::getVocabulary() const {
  return řParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ŘParser::getSerializedATN() const {
  return řParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

ŘParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::StmtlistContext* ŘParser::ProgContext::stmtlist() {
  return getRuleContext<ŘParser::StmtlistContext>(0);
}

tree::TerminalNode* ŘParser::ProgContext::EOF() {
  return getToken(ŘParser::EOF, 0);
}


size_t ŘParser::ProgContext::getRuleIndex() const {
  return ŘParser::RuleProg;
}


std::any ŘParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::ProgContext* ŘParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ŘParser::RuleProg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(18);
    stmtlist();
    setState(19);
    match(ŘParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ŘParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::StmtlistContext* ŘParser::BlockContext::stmtlist() {
  return getRuleContext<ŘParser::StmtlistContext>(0);
}

ŘParser::StmtContext* ŘParser::BlockContext::stmt() {
  return getRuleContext<ŘParser::StmtContext>(0);
}


size_t ŘParser::BlockContext::getRuleIndex() const {
  return ŘParser::RuleBlock;
}


std::any ŘParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::BlockContext* ŘParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, ŘParser::RuleBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(26);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ŘParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(21);
        match(ŘParser::T__0);
        setState(22);
        stmtlist();
        setState(23);
        match(ŘParser::T__1);
        break;
      }

      case ŘParser::T__4:
      case ŘParser::T__6:
      case ŘParser::T__7:
      case ŘParser::T__12:
      case ŘParser::T__16:
      case ŘParser::INTLIT:
      case ŘParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(25);
        stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtlistContext ------------------------------------------------------------------

ŘParser::StmtlistContext::StmtlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::StmtContext* ŘParser::StmtlistContext::stmt() {
  return getRuleContext<ŘParser::StmtContext>(0);
}

std::vector<ŘParser::StmtlistContext *> ŘParser::StmtlistContext::stmtlist() {
  return getRuleContexts<ŘParser::StmtlistContext>();
}

ŘParser::StmtlistContext* ŘParser::StmtlistContext::stmtlist(size_t i) {
  return getRuleContext<ŘParser::StmtlistContext>(i);
}


size_t ŘParser::StmtlistContext::getRuleIndex() const {
  return ŘParser::RuleStmtlist;
}


std::any ŘParser::StmtlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitStmtlist(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::StmtlistContext* ŘParser::stmtlist() {
  StmtlistContext *_localctx = _tracker.createInstance<StmtlistContext>(_ctx, getState());
  enterRule(_localctx, 4, ŘParser::RuleStmtlist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(28);
    stmt();
    setState(33);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(29);
        match(ŘParser::T__2);
        setState(30);
        stmtlist(); 
      }
      setState(35);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(37);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(36);
      match(ŘParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

ŘParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ŘParser::StmtContext::getRuleIndex() const {
  return ŘParser::RuleStmt;
}

void ŘParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpressionContext ------------------------------------------------------------------

ŘParser::ExprContext* ŘParser::ExpressionContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::ExpressionContext::ExpressionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any ŘParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfElseConditionContext ------------------------------------------------------------------

ŘParser::ExprContext* ŘParser::IfElseConditionContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

std::vector<ŘParser::BlockContext *> ŘParser::IfElseConditionContext::block() {
  return getRuleContexts<ŘParser::BlockContext>();
}

ŘParser::BlockContext* ŘParser::IfElseConditionContext::block(size_t i) {
  return getRuleContext<ŘParser::BlockContext>(i);
}

ŘParser::IfElseConditionContext::IfElseConditionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any ŘParser::IfElseConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitIfElseCondition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableAssignmentContext ------------------------------------------------------------------

tree::TerminalNode* ŘParser::VariableAssignmentContext::ID() {
  return getToken(ŘParser::ID, 0);
}

ŘParser::ExprContext* ŘParser::VariableAssignmentContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::VariableAssignmentContext::VariableAssignmentContext(StmtContext *ctx) { copyFrom(ctx); }


std::any ŘParser::VariableAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitVariableAssignment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionDefinitionContext ------------------------------------------------------------------

tree::TerminalNode* ŘParser::FunctionDefinitionContext::ID() {
  return getToken(ŘParser::ID, 0);
}

ŘParser::FuncContext* ŘParser::FunctionDefinitionContext::func() {
  return getRuleContext<ŘParser::FuncContext>(0);
}

ŘParser::FunctionDefinitionContext::FunctionDefinitionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any ŘParser::FunctionDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitFunctionDefinition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfConditionContext ------------------------------------------------------------------

ŘParser::ExprContext* ŘParser::IfConditionContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::BlockContext* ŘParser::IfConditionContext::block() {
  return getRuleContext<ŘParser::BlockContext>(0);
}

ŘParser::IfConditionContext::IfConditionContext(StmtContext *ctx) { copyFrom(ctx); }


std::any ŘParser::IfConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitIfCondition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileLoopContext ------------------------------------------------------------------

ŘParser::ExprContext* ŘParser::WhileLoopContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::BlockContext* ŘParser::WhileLoopContext::block() {
  return getRuleContext<ŘParser::BlockContext>(0);
}

ŘParser::WhileLoopContext::WhileLoopContext(StmtContext *ctx) { copyFrom(ctx); }


std::any ŘParser::WhileLoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitWhileLoop(this);
  else
    return visitor->visitChildren(this);
}
ŘParser::StmtContext* ŘParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, ŘParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ŘParser::VariableAssignmentContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(39);
      match(ŘParser::ID);
      setState(40);
      match(ŘParser::T__3);
      setState(41);
      expr(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ŘParser::FunctionDefinitionContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(42);
      match(ŘParser::ID);
      setState(43);
      match(ŘParser::T__3);
      setState(44);
      func();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<ŘParser::IfConditionContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(45);
      match(ŘParser::T__4);
      setState(46);
      antlrcpp::downCast<IfConditionContext *>(_localctx)->cond = expr(0);
      setState(47);
      antlrcpp::downCast<IfConditionContext *>(_localctx)->body = block();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<ŘParser::IfElseConditionContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(49);
      match(ŘParser::T__4);
      setState(50);
      antlrcpp::downCast<IfElseConditionContext *>(_localctx)->cond = expr(0);
      setState(51);
      antlrcpp::downCast<IfElseConditionContext *>(_localctx)->truebody = block();
      setState(52);
      match(ŘParser::T__5);
      setState(53);
      antlrcpp::downCast<IfElseConditionContext *>(_localctx)->falsebody = block();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<ŘParser::WhileLoopContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(55);
      match(ŘParser::T__6);
      setState(56);
      antlrcpp::downCast<WhileLoopContext *>(_localctx)->cond = expr(0);
      setState(57);
      antlrcpp::downCast<WhileLoopContext *>(_localctx)->body = block();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<ŘParser::ExpressionContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(59);
      expr(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

ŘParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ŘParser::ExprContext::getRuleIndex() const {
  return ŘParser::RuleExpr;
}

void ŘParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- OpUnaryContext ------------------------------------------------------------------

ŘParser::ExprContext* ŘParser::OpUnaryContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::OpUnaryContext::OpUnaryContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::OpUnaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitOpUnary(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableReadContext ------------------------------------------------------------------

tree::TerminalNode* ŘParser::VariableReadContext::ID() {
  return getToken(ŘParser::ID, 0);
}

ŘParser::VariableReadContext::VariableReadContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::VariableReadContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitVariableRead(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LitContext ------------------------------------------------------------------

ŘParser::LiteralContext* ŘParser::LitContext::literal() {
  return getRuleContext<ŘParser::LiteralContext>(0);
}

ŘParser::LitContext::LitContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::LitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitLit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpComparsionContext ------------------------------------------------------------------

std::vector<ŘParser::ExprContext *> ŘParser::OpComparsionContext::expr() {
  return getRuleContexts<ŘParser::ExprContext>();
}

ŘParser::ExprContext* ŘParser::OpComparsionContext::expr(size_t i) {
  return getRuleContext<ŘParser::ExprContext>(i);
}

ŘParser::OpComparsionContext::OpComparsionContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::OpComparsionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitOpComparsion(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionCallContext ------------------------------------------------------------------

tree::TerminalNode* ŘParser::FunctionCallContext::ID() {
  return getToken(ŘParser::ID, 0);
}

ŘParser::ArglistContext* ŘParser::FunctionCallContext::arglist() {
  return getRuleContext<ŘParser::ArglistContext>(0);
}

ŘParser::FunctionCallContext::FunctionCallContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::FunctionCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitFunctionCall(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpParensContext ------------------------------------------------------------------

ŘParser::ExprContext* ŘParser::OpParensContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

ŘParser::OpParensContext::OpParensContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::OpParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitOpParens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpComputationContext ------------------------------------------------------------------

std::vector<ŘParser::ExprContext *> ŘParser::OpComputationContext::expr() {
  return getRuleContexts<ŘParser::ExprContext>();
}

ŘParser::ExprContext* ŘParser::OpComputationContext::expr(size_t i) {
  return getRuleContext<ŘParser::ExprContext>(i);
}

ŘParser::OpComputationContext::OpComputationContext(ExprContext *ctx) { copyFrom(ctx); }


std::any ŘParser::OpComputationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitOpComputation(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::ExprContext* ŘParser::expr() {
   return expr(0);
}

ŘParser::ExprContext* ŘParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ŘParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  ŘParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, ŘParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LitContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(63);
      literal();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<VariableReadContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(64);
      match(ŘParser::ID);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<FunctionCallContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(65);
      antlrcpp::downCast<FunctionCallContext *>(_localctx)->fun = match(ŘParser::ID);
      setState(66);
      match(ŘParser::T__7);
      setState(68);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 3285248) != 0)) {
        setState(67);
        antlrcpp::downCast<FunctionCallContext *>(_localctx)->args = arglist();
      }
      setState(70);
      match(ŘParser::T__8);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<OpUnaryContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(71);
      antlrcpp::downCast<OpUnaryContext *>(_localctx)->op = _input->LT(1);
      _la = _input->LA(1);
      if (!(_la == ŘParser::T__12

      || _la == ŘParser::T__16)) {
        antlrcpp::downCast<OpUnaryContext *>(_localctx)->op = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(72);
      antlrcpp::downCast<OpUnaryContext *>(_localctx)->e = expr(2);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<OpParensContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(73);
      match(ŘParser::T__7);
      setState(74);
      antlrcpp::downCast<OpParensContext *>(_localctx)->e = expr(0);
      setState(75);
      match(ŘParser::T__8);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(90);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(88);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<OpComputationContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(79);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(80);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == ŘParser::T__9

          || _la == ŘParser::T__10)) {
            antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(81);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->right = expr(6);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<OpComputationContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(82);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(83);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == ŘParser::T__11

          || _la == ŘParser::T__12)) {
            antlrcpp::downCast<OpComputationContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(84);
          antlrcpp::downCast<OpComputationContext *>(_localctx)->right = expr(5);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<OpComparsionContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(85);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(86);
          antlrcpp::downCast<OpComparsionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 114688) != 0))) {
            antlrcpp::downCast<OpComparsionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(87);
          antlrcpp::downCast<OpComparsionContext *>(_localctx)->right = expr(4);
          break;
        }

        default:
          break;
        } 
      }
      setState(92);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ArglistContext ------------------------------------------------------------------

ŘParser::ArglistContext::ArglistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::ExprContext* ŘParser::ArglistContext::expr() {
  return getRuleContext<ŘParser::ExprContext>(0);
}

std::vector<ŘParser::ArglistContext *> ŘParser::ArglistContext::arglist() {
  return getRuleContexts<ŘParser::ArglistContext>();
}

ŘParser::ArglistContext* ŘParser::ArglistContext::arglist(size_t i) {
  return getRuleContext<ŘParser::ArglistContext>(i);
}


size_t ŘParser::ArglistContext::getRuleIndex() const {
  return ŘParser::RuleArglist;
}


std::any ŘParser::ArglistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitArglist(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::ArglistContext* ŘParser::arglist() {
  ArglistContext *_localctx = _tracker.createInstance<ArglistContext>(_ctx, getState());
  enterRule(_localctx, 10, ŘParser::RuleArglist);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(93);
    expr(0);
    setState(98);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(94);
        match(ŘParser::T__17);
        setState(95);
        arglist(); 
      }
      setState(100);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

ŘParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ŘParser::BlockContext* ŘParser::FuncContext::block() {
  return getRuleContext<ŘParser::BlockContext>(0);
}

ŘParser::ParamlistContext* ŘParser::FuncContext::paramlist() {
  return getRuleContext<ŘParser::ParamlistContext>(0);
}


size_t ŘParser::FuncContext::getRuleIndex() const {
  return ŘParser::RuleFunc;
}


std::any ŘParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ŘVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

ŘParser::FuncContext* ŘParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 12, ŘParser::RuleFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(ŘParser::T__18);
    setState(102);
    match(ŘParser::T__7);
    setState(104);
    _errHandler->sync(this);
